# COMP5112-parallel

./: pthreads_smith_waterman_skeleton.cpp  readme.md
cuda/: .gitignore  CMakeLists.txt  cases2.py  cuda_smith_waterman_skeleton.cu  onsave.js  run_cuda.sh  time.md
cuda/serial/: serial_smith_waterman.cpp
mpi/: # Time.md  .gitignore  CMakeLists.txt  mpi_smith_waterman_skeleton.cpp  nodemon.sh  onsave.js  run_mpi.sh  solution.cpp  test.cpp  watch_mpi.js  watch_mpi.sh
pthread/: cases.js  cases.py  onsave.js  pthreads_smith_waterman  pthreads_smith_waterman_skeleton.cpp  run_pthreads.sh  time.md
pthread/serial/: serial_smith_waterman
